# AC215_datadetox

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: datadetox-cicd.yml
backend/: .coverage  Dockerfile  coverage.xml  main.py  pyproject.toml  pytest.ini  rag_cli.py  start-backend-container.sh
backend/agents/: prompts.py  session.py
backend/datadetox_agents/: rag.py  rag_cli.py  search_agent.py
backend/routers/: api_models.py  client.py  health_check.py  mcp_clients.py
backend/tests/: test_huggingface.py  test_search_neo4j.py
deployment/: README.md  docker-shell.sh
deployment/deploy_k8s/: setup_containers.py  setup_loadbalancer.py
docs/: app_design_doc.md  milestone4.md
docs/ms4/: app_design_doc.md
docs/ms5/: milestone5.md  test-coverage.md
frontend/: Dockerfile  package-lock.json  package.json  start-frontend-container.sh
mcp/: hf_mcp.py
model-lineage/: .coverage  .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  coverage.xml  lineage_scraper.py  pyproject.toml
model-lineage/config/: __init__.py  settings.py
model-lineage/graph/: __init__.py  builder.py  models.py  neo4j_client.py
model-lineage/scrapers/: huggingface_scraper.py  model_parser.py
model-lineage/storage/: __init__.py  data_store.py
model-lineage/tests/: test_builder.py  test_data_store.py  test_huggingface_scraper.py  test_models.py
model-lineage/tests/unit/: test_neo4j_client.py
rag/: README.md  rag_cli.py
rag_db/: rag_db_cli.py
scraper/: README.md
scraper/graph/: builder.py
(+49 files in other folders)
